refactor: Create individual player boards

--- a/templates/game.html
+++ b/templates/game.html
@@ -14,8 +14,9 @@
     <!-- НОВЫЙ БЛОК "ОБЩИЙ СТОЛ" -->
     <div class="card">
         <h2>Общий стол:</h2>
+        <!-- Этот div теперь будет flex-контейнером для столов игроков -->
         <div id="revealed-cards-area">
-            <p>Здесь будут появляться раскрытые карты игроков...</p>
+            <p>Ожидание игроков...</p>
         </div>
     </div>
 
