--- a/static/css/style.css
+++ b/static/css/style.css
@@ -178,3 +178,9 @@ button:disabled {
     background-color: transparent;
     border-style: dashed;
 }
+.vote-count {
+    color: var(--primary-color);
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-left: 8px;
+}
